[gd_scene load_steps=27 format=3 uid="uid://bvknror5yelqa"]

[ext_resource type="Script" path="res://Main/Player/Main/player.gd" id="1_4asse"]
[ext_resource type="Resource" uid="uid://dg0v5u41ae3da" path="res://Weapons/test_pistol/pistol_resource.tres" id="2_wx1qb"]
[ext_resource type="PackedScene" uid="uid://cric4w1wky27u" path="res://Main/Player/Mesh/player_mesh_child.tscn" id="2_y00rr"]
[ext_resource type="PackedScene" uid="uid://npe0v4dkktk8" path="res://Main/Player/Camera Rig/Camera/fps_camera_rig.tscn" id="3_xxgq7"]
[ext_resource type="Script" path="res://Main/Player/StateMachine/StateMachine.gd" id="4_casmj"]
[ext_resource type="Resource" uid="uid://dwmjcdqnrijn0" path="res://Weapons/Crowbar/crowbar_resource.tres" id="4_o4mu7"]
[ext_resource type="Script" path="res://Main/Player/StateMachine/CrouchingJumpState.gd" id="5_ltw7u"]
[ext_resource type="ArrayMesh" uid="uid://cqg2cr8qiwr7n" path="res://Weapons/Crowbar/crowbar_mesh.tres" id="5_t6nxw"]
[ext_resource type="Script" path="res://Main/Player/StateMachine/IdleState.gd" id="6_iu55g"]
[ext_resource type="Script" path="res://Main/Player/StateMachine/CrouchingIdleState.gd" id="7_8qlbf"]
[ext_resource type="Script" path="res://Main/Player/StateMachine/CrouchingState.gd" id="8_xxrp4"]
[ext_resource type="Script" path="res://Main/Player/StateMachine/WalkingState.gd" id="9_e74a4"]
[ext_resource type="Script" path="res://Main/Player/StateMachine/SprintingState.gd" id="10_a1s34"]
[ext_resource type="Script" path="res://Main/Player/StateMachine/JumpState.gd" id="11_calc2"]
[ext_resource type="PackedScene" uid="uid://jspxrkmg6wp0" path="res://Main/Menu/Pause/pause_menu.tscn" id="12_6fgqy"]
[ext_resource type="PackedScene" uid="uid://6so647i1q125" path="res://Main/Player/UI/Reticle/reticle.tscn" id="12_e0ayw"]
[ext_resource type="Script" path="res://Main/Player/UI/Debug Panel.gd" id="13_om0tq"]
[ext_resource type="Script" path="res://Main/Player/Main/player_input_handler.gd" id="15_7prtg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4icvg"]
radius = 1.3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wsx4v"]
radius = 1.3
height = 2.6

[sub_resource type="Animation" id="Animation_hlig3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerMesh/Quad Sphere:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraRig:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraRig:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(3.88431, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraRig:position:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.537035, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HeadCollider:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 3.58908, 0)]
}

[sub_resource type="Animation" id="Animation_cb4el"]
resource_name = "crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerMesh/Quad Sphere:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -1.10839, -1.30042)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraRig:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraRig:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(3.88431, -0.25, 0, 0.25, 0, 2.61176, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraRig:position:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-0.537035, -0.25, 0, 0.25, 0, -1.83009, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HeadCollider:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 3.58908, 0), Vector3(0, 2.39573, -1.2704)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4hjeb"]
_data = {
"RESET": SubResource("Animation_hlig3"),
"crouch": SubResource("Animation_cb4el")
}

[sub_resource type="Theme" id="Theme_qvtje"]
default_font_size = 36

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w80xk"]
bg_color = Color(0.0700053, 0.721729, 0.261646, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3lqex"]
properties/0/path = NodePath(".:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("CameraRig:position")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("CameraRig:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("CameraRig/CameraRecoil/Camera3D/WeaponRig/WeaponBase/WeaponRecoil/MuzzleFlash/OmniLight3D:visible")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath("CameraRig/CameraRecoil/Camera3D/WeaponRig/WeaponBase/WeaponRecoil/MuzzleFlash/GPUParticles3D:emitting")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath("PlayerMesh/Quad Sphere:position")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("PlayerMesh/Quad Sphere:rotation")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("PlayerMesh/Quad Sphere_001:position")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath("PlayerMesh/Quad Sphere_001:rotation")
properties/9/spawn = true
properties/9/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.269175, 0)
collision_layer = 2
floor_stop_on_slope = false
script = ExtResource("1_4asse")
inventory = Array[Resource("res://Main/Player/Camera Rig/Weapon Scripts/weapon_resource_base.gd")]([ExtResource("2_wx1qb"), ExtResource("4_o4mu7")])

[node name="HeadCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.58908, 0)
shape = SubResource("SphereShape3D_4icvg")

[node name="BodyCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02427, 0)
shape = SubResource("SphereShape3D_4icvg")

[node name="PlayerMesh" parent="." instance=ExtResource("2_y00rr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.54265, 0)

[node name="CameraRig" parent="." instance=ExtResource("3_xxgq7")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.88431, -0.537035)
bullet_hole = "res://Art/2D/Bullet Hole/bullet_decal.tscn"

[node name="WeaponShadow" parent="CameraRig/CameraRecoil/Camera3D/WeaponRig/WeaponBase/WeaponRecoil" index="1"]
visible = true

[node name="WeaponMesh" parent="CameraRig/CameraRecoil/Camera3D/WeaponRig/WeaponBase/WeaponRecoil" index="2"]
transform = Transform3D(-4, -3.49691e-07, -1.52855e-14, 0, -1.74846e-07, 4, -3.49691e-07, 4, 1.74846e-07, 0, 0, 0)
mesh = ExtResource("5_t6nxw")

[node name="CrouchCheck" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.852389, 0, 0, 0, 0.960809, 0, 4.61661, 0)
shape = SubResource("CapsuleShape3D_wsx4v")
debug_shape_custom_color = Color(1, 0.964706, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_4hjeb")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
unique_name_in_owner = true
script = ExtResource("4_casmj")
CURRENT_STATE = NodePath("IdlingState")

[node name="CrouchingJumpState" type="Node" parent="StateMachine"]
script = ExtResource("5_ltw7u")

[node name="IdlingState" type="Node" parent="StateMachine"]
script = ExtResource("6_iu55g")

[node name="CrouchingIdleState" type="Node" parent="StateMachine"]
script = ExtResource("7_8qlbf")

[node name="CrouchingState" type="Node" parent="StateMachine"]
script = ExtResource("8_xxrp4")

[node name="WalkingState" type="Node" parent="StateMachine"]
script = ExtResource("9_e74a4")

[node name="SprintingState" type="Node" parent="StateMachine"]
script = ExtResource("10_a1s34")

[node name="JumpingState" type="Node" parent="StateMachine"]
script = ExtResource("11_calc2")

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("15_7prtg")

[node name="UI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = SubResource("Theme_qvtje")

[node name="PauseMenu" parent="UI" instance=ExtResource("12_6fgqy")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 47.0
offset_top = -104.0
offset_right = 363.0
offset_bottom = -4.0
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Ammo" type="Label" parent="UI/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 0
text = "7/7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="UI/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_w80xk")
value = 100.0
show_percentage = false

[node name="Reticle" parent="UI" node_paths=PackedStringArray("PLAYER_CONTROLLER") instance=ExtResource("12_e0ayw")]
unique_name_in_owner = true
layout_mode = 1
PLAYER_CONTROLLER = NodePath("../..")

[node name="DebugPanel" type="Panel" parent="UI"]
layout_mode = 0
offset_right = 486.0
offset_bottom = 40.0
script = ExtResource("13_om0tq")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DebugPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_config = SubResource("SceneReplicationConfig_3lqex")

[connection signal="player_loaded" from="." to="CameraRig" method="_on_player_player_loaded"]
[connection signal="player_loaded" from="." to="CameraRig/CameraRecoil/Camera3D/WeaponRig/WeaponBase/WeaponFiringLogic" method="_on_player_player_loaded"]
[connection signal="weapon_switched" from="." to="CameraRig" method="_on_player_weapon_switched"]
[connection signal="weapon_trigger_down" from="." to="CameraRig/CameraRecoil/Camera3D/WeaponRig/WeaponBase/WeaponFiringLogic" method="_on_player_weapon_trigger_down"]
[connection signal="weapon_trigger_up" from="." to="CameraRig/CameraRecoil/Camera3D/WeaponRig/WeaponBase/WeaponFiringLogic" method="_on_player_weapon_trigger_up"]

[editable path="PlayerMesh"]
[editable path="CameraRig"]
